{
  "sourceLanguage" : "en",
  "strings" : {
    "%@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@"
          }
        }
      }
    },
    "Calculate" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Calculate"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Calcular"
          }
        }
      }
    },
    "crypListTitle" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cryptocurrencies"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Criptomonedas"
          }
        }
      }
    },
    "Crypto Details" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Crypto Details"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Detalle de la crypto"
          }
        }
      }
    },
    "I Want to Buy for €" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "I Want to Buy for €"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Quiero comprar en €"
          }
        }
      }
    },
    "Volume over 24h: %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Volume over 24h: %@"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Volumen últimas 24h: %@"
          }
        }
      }
    },
    "You will have %.4f of %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "You will have %1$.4f of %2$@"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tu tendrás %1$.4f de %2$@"
          }
        }
      }
    }
  },
  "version" : "1.0"
}