...
                                    viewModel.loadMoreData()
                                }
                            }
                        }
                    }
                }
                .accessibilityIdentifier("MyCryptoList")
                .navigationBarTitleDisplayMode(.inline)
                .navigationTitle(LocalizedStringKey("crypListTitle"))
                .padding(.top, scrollMargin)
                .padding(.bottom, scrollMargin)
                if viewModel.isLoading {
                    ProgressView()
...
